--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.0
+plotly==5.7.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 protobuf==3.20.1
@@ -76,6 +77,7 @@ smmap==5.0.0
 soupsieve==2.3.2.post1
 stack-data==0.2.0
 streamlit==1.8.1
+tenacity==8.0.1
 terminado==0.13.3
 tinycss2==1.1.1
 toml==0.10.2
